@@ -1,16 +1,12 @@
 Changes
-Changes.bak
 LICENSE
 MANIFEST
 META.yml
 Makefile.PL
 bin/rdfns
 lib/RDF/NS.pm
-lib/RDF/NS.pm.bak
 lib/RDF/NS/Trine.pm
-lib/RDF/NS/Trine.pm.bak
 lib/RDF/NS/URIS.pm
-lib/RDF/NS/URIS.pm.bak
 share/prefix.cc
 t/author-critic.t
 t/compile.t
