@@ -15,8 +15,4 @@ meta-spec:
 name: RDF-NS
 requires:
   File::ShareDir: 1.00
-resources:
-  bugtracker: https://github.com/nichtich/RDF-NS/issues
-  homepage: https://github.com/nichtich/RDF-NS
-  repository: https://github.com/nichtich/RDF-NS.git
-version: 20130802
+version: 20130812
