@@ -43,7 +43,7 @@ rdfns - quickly get common URI namespaces
 
 =head1 VERSION
 
-version 20130802
+version 20130812
 
 =head1 AUTHOR
 
