@@ -2,7 +2,7 @@ use strict;
 use warnings;
 package RDF::NS;
 {
-  $RDF::NS::VERSION = '20130802';
+  $RDF::NS::VERSION = '20130812';
 }
 #ABSTRACT: Just use popular RDF namespace prefixes from prefix.cc
 
@@ -234,12 +234,12 @@ RDF::NS - Just use popular RDF namespace prefixes from prefix.cc
 
 =head1 VERSION
 
-version 20130802
+version 20130812
 
 =head1 SYNOPSIS
 
-  use RDF::NS '20130802';              # check at compile time
-  my $ns = RDF::NS->new('20130802');   # check at runtime
+  use RDF::NS '20130812';              # check at compile time
+  my $ns = RDF::NS->new('20130812');   # check at runtime
 
   $ns->foaf;               # http://xmlns.com/foaf/0.1/
   $ns->foaf_Person;        # http://xmlns.com/foaf/0.1/Person
@@ -274,20 +274,20 @@ maintainable.  In the end we all use more or less the same prefix definitions,
 as collected at L<http://prefix.cc>. This module includes all these prefixes as
 defined at specific snapshots in time. These snapshots correspond to version
 numbers of this module. By selecting particular versions, you make sure that
-changes at prefix.cc won't affect your scripts.
+changes at prefix.cc won't affect your programs.
 
 The command line client L<rdfns> is installed automatically with this module:
 
-  $ rdfns -ttl rdf,foaf
+  $ rdfns rdf,foaf.ttl
   @prefix foaf: <http://xmlns.com/foaf/0.1/> .
   @prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
 
 This module does not require L<RDF::Trine>, which is recommended nevertheless.
-You should install at least RDF::NS 0.140.  If you prefer RDF::NS to return
-instances of L<RDF::Trine::Node::Resource> instead of plain strings, use
-L<RDF::NS::Trine>.
+(at least version 0.140).  If you prefer RDF::NS to return instances of 
+L<RDF::Trine::Node::Resource> instead of plain strings, use L<RDF::NS::Trine>.
+<RDF::NS::URIS> is a similar module that returns instances of L<URI>.
 
-The code repository of this module also contains an
+The code repository of this module contains an
 L<update script|https://github.com/nichtich/RDF-NS/blob/master/update.pl>
 to download the current prefix-namespace mappings from L<http://prefix.cc>.
 
@@ -305,7 +305,7 @@ date.
 
 =head2 I<prefix>
 
-Returns the namespace for E<prefix> if namespace prefix is defined. For
+Returns the namespace for I<prefix> if namespace prefix is defined. For
 instance C<< $ns->foaf >> returns C<http://xmlns.com/foaf/0.1/>.
 
 =head2 I<prefix_name>
@@ -316,7 +316,7 @@ instance C<< $ns->foaf_Person >> returns C<http://xmlns.com/foaf/0.1/Person>.
 =head2 uri ( $short | "<$URI>" )
 
 Expand a prefixed URI, such as C<foaf:Person> or C<foaf_Person>. Alternatively 
-you can expand prefixed URIs with method calls, such as C<$ns-E<gt>foaf_Person>.
+you can expand prefixed URIs with method calls, such as C<$ns-I<gt>foaf_Person>.
 If you pass an URI wrapped in C<E<lt>> and C<E<gt>>, it will not be expanded
 but returned as given.
 
