@@ -1,3 +1,6 @@
+20130812 (1104 prefixes)
+  added: lldr,up
+  changed: copyright
 20130802 (1102 prefixes)
   added: algo,bsb,centrifuge,cex,cf,cidoc,crtv,dbc,dbnary,dbpr,dbt,dctypes,dis,dvia,ebu,ecb,ecpo,exterms,frapo,geof,geofla,gfo,hifm,httpm,iot,itsrdf,kbp,l4lod,laabs,locwd,mods,namespaces,nif,nsl,odcs,oecd,omn,opmw,oslc,pam,penn,pkgsrc,ple,poste,premis,prolog,qrl,qvoc,radion,rdarole,rdf123,reve,rlno,rlnr,rlog,roevo,roterms,sci,sem,site,stac,stats,wf4ever,wfm,wfs,wikterms,wl,won,worldbank
   changed: b2bo,biocore,cito,dita,dso,lgd,lv,oa,osr,pr,req,ro,voaf
